# monarch-mcp

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: react_agent.py
src/monarch_mcp/: client.py  server.py
src/monarch_mcp/tools/: __init__.py  chemical.py  disease.py  entity.py  gene.py  histopheno.py  mapping.py  phenotype.py  protein.py  search.py  similarity.py  variant.py
tests/: conftest.py  test_client.py  test_server.py
